--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,6 @@ main {
     max-width: 1000px;
 }
 
-/* body {
-    transition: all 0.3s ease 0.1s;
-} */
-
 .post {
     border: 2px solid black;
     border-radius: 5px;
@@ -26,6 +22,11 @@ main {
     margin: 8px 0;
     border: 2px solid black;
     border-radius: 5px;
+}
+
+#top-link {
+    background-color: inherit;
+    transition: background-color 0.3s linear;
 }
 
 #top-link:hover {
@@ -69,21 +70,12 @@ a:active {
     padding: 5px;
     border: 2px solid black;
     border-radius: 5px;
-    /* transition: all 0.3s ease 0.1s; */
 }
-
-/* #button-box>* {
-    transition: all 0.3s ease 0.1s;
-} */
-
-/* #all-button {
-    border: grey;
-    background-color: grey;
-} */
 
 .button {
     padding: 3px;
     transition: background-color 0.2s ease;
+    background-color: white;
 }
 
 .button:hover {
