add responsive CSS

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ a:active {
 
 .video {
     max-width: 100%;
+    max-height: 400px;
 }
 
 #thumbnail-container {
@@ -129,4 +130,19 @@ footer {
         transition: background-color 0.2s ease;
     }
     
+}
+
+@media only screen and (max-width: 500px) {
+    .thumbnail, .video {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .post>h3 {
+        font-size: 16px;
+    }
+
+    .post>span {
+        font-size: 12px;
+    }
 }
